--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: Create Release
 
 on:
   push:
-    # Trigger on tags that start with "v", for example: v2.4.0
     tags:
       - 'v*'
 
@@ -17,11 +16,11 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref }}
-          release_name: 'Release ${{ github.ref }}'
+          name: 'Release ${{ github.ref }}'
           body: |
-            **What's New in this Release:**
+            # Update
 
-            - Add your release information here.
-            - You can include changelogs, features, bug fixes, etc.
+            - fix: menu sounds plays when menu has no option (KeyPress)
+
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
