--- a/CS2ScreenMenuAPI.csproj
+++ b/CS2ScreenMenuAPI.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="Newtonsoft.Json.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	
+
 </Project>
