--- a/CS2ScreenMenuAPI.csproj
+++ b/CS2ScreenMenuAPI.csproj
@@ -13,6 +13,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="TestPlugin\TestPlugin.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CounterStrikeSharp.API" Version="1.0.314" />
 		<PackageReference Include="Dapper" Version="2.1.66" />
 		<PackageReference Include="MySqlConnector" Version="2.4.0" />
