More closely replicate SourceMod's menu
Changes:
- Allow one more items per page when screen resolution is disabled
  This makes exit 0 instead of 9
- Put controls on a single line for brevity
- Refactored how the menu strings append text
- Items in the last page menu will remain expanded
- Differentiate between Back and Previous buttons
- If either back/prev or next is present, disabled versions leave an empty line
- Add an empty line between items and navigations
- Make Exit button background text

Bugfixes:
- Always read keys from configuration incase a menu is forced
- Fixed maxTextLength incorrectly accumulating causing the box to be too wide
- Freeze the player via setting their speed to 0
- Fix empty line at the end causing the background to be too tall

--- a/CS2ScreenMenuAPI.csproj
+++ b/CS2ScreenMenuAPI.csproj
@@ -6,9 +6,8 @@
 		<Nullable>enable</Nullable>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-		<OutputPath>bin\Release\addons\counterstrikesharp\shared\CS2ScreenMenuAPI\</OutputPath>
+		<OutputPath>bin\$(Configuration)\addons\counterstrikesharp\shared\CS2ScreenMenuAPI\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<Configuration>Release</Configuration>
 		<DebugType>none</DebugType>
 	</PropertyGroup>
 
