--- a/CS2ScreenMenuAPI.csproj
+++ b/CS2ScreenMenuAPI.csproj
@@ -20,6 +20,15 @@
 		<None Update="Tomlyn.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+
+			<None Update="MySqlConnector.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+
+			<None Update="Dapper.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		
 		<Content Include="config.toml">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
