--- a/TestPlugin/TestPlugin.csproj
+++ b/TestPlugin/TestPlugin.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="CounterStrikeSharp.API" Version="1.0.314" />
-    <PackageReference Include="CS2ScreenMenuAPI" Version="3.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CS2ScreenMenuAPI">
+      <HintPath>../../CS2ScreenMenuAPI</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
